
2004-02-20 Kristoffer Delforge <delforge@users.sf.net>
    * changed a >= to > in dc1394_capture.c:99
    * changed a >= to = in dc1394_capture.c:112
    * don't use intermediate "char* device" in dc1394_capture.c:247
	
2004-02-20 Damien <ddouxchamps@users.sf.net>
    * applied patch from Johann Schoonees for extra buffering option.
      This breaks compatibility for the capture functions. Examples have
      been updated.
	
2004-04-07 Damien <ddouxchamps@users.sf.net>
    * Attempt to fix the BPP arithmetic (floating point) exception that occurs
      with weird hardware.
	
2004-08-10 Damien <ddouxchamps@users.sf.net>
    * Applied patch from Johann Schoonees to remove extra buffering.
      Yet another compatibility break.
	
2004-09-07 Damien <ddouxchamps@users.sf.net>
    * Applied a patch from David Ergo to fix broken raw capture in libdc0.9.5.

2004-09-13 Damien <ddouxchamps@users.sf.net>
    * Corrected library version
    * Remove 1.31 changes that I committed by mistake
	
2004-09-17 Damien <ddouxchamps@users.sf.net>
    * Added most IIDC 1.31 functions and definitions
	
2004-09-30 Damien <ddouxchamps@users.sf.net>
    * Introduced the IIDC_VERSION_X_XX definitions. Interface version is now 12.

2004-09-30 Damien <ddouxchamps@users.sf.net>
    * Fixed small issue in the IIDC version detection
	
2004-10-28 Damien <ddouxchamps@users.sf.net>
    * Applied a patch from F. Devernay to allow compilation on x86_64.
	
2004-11-11 Damien <ddouxchamps@users.sf.net>
    * fixed format quadlets per packet access in _dc1394_get_quadlets_per_packet()
	
2004-11-12 Damien <ddouxchamps@users.sf.net>
    * update for previous fix: use NUM_FRAMERATES
	
2005-01-26 Damien <ddouxchamps@users.sf.net>
    * update the get/set_operation_mode functions.
    * applied a patch from Yves Jaeger to add software trigger functions
    * updated the configure.in script to link properly against libraw1394 (Peter 'p2' De Schrijver)