@@ -1,5 +1,0 @@
-/* Define this if you have libraw1394 installed */
-#undef HAVE_LIBRAW1394
-
-/* Define this if you have a version of libraw1394 <= 0.8.2 */
-#undef LIBRAW1394_OLD
