@@ -11,9 +11,9 @@ AM_PROG_LIBTOOL
 # Check for the new version of libraw1394 first since they might have both
 # installed and we want to use the newest version
 AC_CHECK_LIB(raw1394, raw1394_new_handle,
-             [AC_DEFINE(HAVE_LIBRAW1394) LIBS="$LIBS -lraw1394";break],
+             [AC_DEFINE(HAVE_LIBRAW1394,[],[Defined if libraw1394 is present]) LIBS="$LIBS -lraw1394";break],
              AC_CHECK_LIB(raw1394, raw1394_get_handle,
-			  [AC_DEFINE(LIBRAW1394_OLD) AC_DEFINE(HAVE_LIBRAW1394) LIBS="$LIBS -lraw1394"  ;break ],
+			  [AC_DEFINE(LIBRAW1394_OLD,[],[Defined if an old version of libraw1394 is present]) AC_DEFINE(HAVE_LIBRAW1394,[],[Defined if libraw1394 is present]) LIBS="$LIBS -lraw1394"  ;break ],
                           AC_MSG_ERROR(No version of libraw1394 found!)))
 
 AC_HEADER_STDC 
