@@ -501,3 +501,4 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
     * update the get/set_operation_mode functions.
     * applied a patch from Yves Jaeger to add software trigger functions
     * updated the configure.in script to link properly against libraw1394 (Peter 'p2' De Schrijver)
+    * removed the deprecated file acconfig.h and updated configure.in accordingly.
